Add first programming note

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,37 @@
-site_name: My Docs
-theme: material
+site_name: Sean's Notes
+theme:
+  name: material
+  # features:
+  # - navigation.instant
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      media: "(prefers-color-scheme: light)"
+      primary: deep orange
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      media: "(prefers-color-scheme: dark)"
+      primary: deep orange
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+  features:
+    - navigation.indexes
+
+repo_url: https://github.com/stv8/notes
+repo_name: stv8/notes
+
+markdown_extensions:
+  - toc:
+      permalink: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - attr_list
+  - md_in_html
