Add some db links

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/PostgreSQL/High Level Performance Anlysis.md",
+            "file": "docs/Python/index.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/PostgreSQL/High Level Performance Anlysis.md",
+                "file": "docs/Python/index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/PostgreSQL/High Level Performance Anlysis.md",
+                "file": "docs/Python/index.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/PostgreSQL/High Level Performance Anlysis.md"
+                "file": "docs/Python/index.md"
               }
             }
           }
@@ -130,13 +130,13 @@
   },
   "active": "3a683175237900da",
   "lastOpenFiles": [
-    "docs/PostgreSQL/index.md",
-    "docs/PostgreSQL/High Level Performance Anlysis.md",
+    "docs/index.md",
+    "docs/Databases/PostgreSQL/High Level Performance Anlysis.md",
+    "docs/Databases/index.md",
     "assets/cache-hit-formula.png.md",
     "docs/assets/cache-hit-formula.png",
     "docs/PostgreSQL/assets/cache-hit-formula.png",
     "docs/assets/cache-hit-formula.png.png",
-    "docs/index.md",
     "docs/PostgreSQL/i-love-postgres.md"
   ]
 }
