--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,8 @@
   "useMarkdownLinks": true,
   "showUnsupportedFiles": true,
   "attachmentFolderPath": "docs/assets",
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "userIgnoreFilters": [
+    "venv/"
+  ]
 }
